--- a/_posts/en/pages/2014-09-19-about.md
+++ b/_posts/en/pages/2014-09-19-about.md
@@ -1,5 +1,38 @@
 ---
+title: about
 name: about
 layout: about
 weight: 1
 ---
+
+## About us
+
+O que pode ser sonhado, pode ser construído.  
+Essa frase resume um pouco do que seguimos em relação ao nosso trabalho.  
+A 42i é uma empresa que desde seu começo se define como uma produtora digital e nosso foco é construir soluções de tecnologia e comunicação.  
+Sites, aplicativos e sistemas customizados são apenas alguns dos produtos mais conhecidos que temos em nosso portfolio.  
+Na prática acreditamos que se houver uma necessidade na área digital, desde o desenvolvimento de um sistema de gerenciamento de milhas e pontos, até a gestão da programação de filmes em um cinema, juntos, chegamos em uma solução.
+
+## 42i and the client
+
+O fator essencial para garantir o bom andamento de um trabalho é a clareza na comunicação.  
+A todo o momento somos o mais claros, sinceros e didáticos quanto possível. Por isso procuramos criar
+uma relação de entendimento e compreensão mútuos, em que dispensamos jargões técnicos e palavreado descolado.  
+Transparência é fundamental, portanto somos os primeiros a admitir erros e levantar bandeiras vermelhas. Nesse caso atuamos com a mesma velocidade para corrigir esses desvios de percurso.
+
+## 42i and the project
+
+Criatividade não é mágica, é técnica.  
+E como nada surge por milagre, nós atuamos começando na fase conceitual até o lançamento
+de experiências utilizando uma série de boas práticas que garantem que projetos fluam naturalmente
+e sem grandes imprevistos.  
+Essa jornada começa com muita pesquisa e exploração, quando entendemos os desafios e oportunidades de nossos clientes e traçamos um caminho claro para o sucesso de uma ideia.  
+Sabendo que nenhum caso é igual ao outro, buscamos identificar dentro de uma série de processos de gestão qual é o mais apropriado às necessidades especificas de cada projeto.
+
+## 42i and the user
+
+Durante todo o processo priorizamos o usuário e suas necessidades.  
+A 42i acredita que o fator determinante para o êxito de qualquer projeto é desenhar experiências que possuem um valor real para a vida das pessoas, nas quais elas enxerguem utilidade e usem naturalmente.  
+Dessa forma, colocamos os interesses desses seres humanos no centro de todas as interfaces que desenvolvemos.  
+Essa filosofia só fortalece a relação entre consumidores e marcas quando entregamos o produto final.
+"
