fixed techs loop on project page

--- a/_posts/pt-br/projects/2014-09-19-netmiles.md
+++ b/_posts/pt-br/projects/2014-09-19-netmiles.md
@@ -22,7 +22,11 @@ year: ""
 project-type: ""
 
 icons:
- - icon-name: ok
- - icon-name: pok
- - icon-name: dok
+  - icon-name: ok
+  - icon-name: pok
+  - icon-name: dok
+
+techs:
+  - tech-name: ok
+  - tech-name: pok
 ---
