added images folder structure

--- a/_posts/en/pages/2014-09-19-about.md
+++ b/_posts/en/pages/2014-09-19-about.md
@@ -1,8 +1,8 @@
 ---
-title: about
-name: about
-layout: about
-weight: 1
+title: "about"
+name: "about"
+layout: "about"
+weight: "1"
 ---
 
 ## About us
