--- a/_posts/en/pages/2014-09-19-contact.md
+++ b/_posts/en/pages/2014-09-19-contact.md
@@ -1,6 +1,6 @@
 ---
-title: contact
-name: contact
-layout: contact
-weight: 4
+title: "contact"
+name: "contact"
+layout: "contact"
+weight: "4"
 ---
