--- a/_posts/pt-br/pages/2014-09-19-about.md
+++ b/_posts/pt-br/pages/2014-09-19-about.md
@@ -1,9 +1,9 @@
 ---
-title: sobre
-name: about
-layout: about
-weight: 1
-permalink: /sobre/
+title: "sobre"
+name: "about"
+layout: "about"
+weight: "1"
+permalink: "/sobre/"
 ---
 
 ## Um pouco sobre nós
