--- a/_posts/pt-br/pages/2014-09-19-contact.md
+++ b/_posts/pt-br/pages/2014-09-19-contact.md
@@ -1,7 +1,7 @@
 ---
-title: contato
-name: contact
-layout: contact
-weight: 4
-permalink: /contato/
+title: "contato"
+name: "contact"
+layout: "contact"
+weight: "4"
+permalink: "/contato/"
 ---
