--- a/_posts/en/pages/2014-09-19-projects.md
+++ b/_posts/en/pages/2014-09-19-projects.md
@@ -1,6 +1,6 @@
 ---
-title: projects
-name: projects
-layout: projects
-weight: 2
+title: "projects"
+name: "projects"
+layout: "projects"
+weight: "2"
 ---
