--- a/_posts/pt-br/pages/2014-09-19-projects.md
+++ b/_posts/pt-br/pages/2014-09-19-projects.md
@@ -1,7 +1,7 @@
 ---
-title: projetos
-name: projects
-layout: projects
-weight: 2
-permalink: /projetos/
+title: "projetos"
+name: "projects"
+layout: "projects"
+weight: "2"
+permalink: "/projetos/"
 ---
