--- a/_posts/en/projects/2014-09-19-netmiles.md
+++ b/_posts/en/projects/2014-09-19-netmiles.md
@@ -10,8 +10,8 @@ title:  "NetMiles"
 subtitle: "Curabitur turpis mauris, ornare sed ipsum at, semper vehicula sapien."
 description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet hendrerit erat. Ut tristique mauris orci, quis ornare felis cursus et. Donec dui leo, malesuada a tellus at, venenatis ultrices tortor. Sed adipiscing, mauris in interdum malesuada, elit elit facilisis eros, consequat dapibus ipsum orci vel nulla."
 
-project-img: ""
-project-thumb: ""
+project-img: "2014-09-19-netmiles/netmiles.jpg"
+project-thumb: "2014-09-19-netmiles/netmiles.jpg"
 
 project: ""
 project-link: ""
