--- a/_posts/en/projects/2014-09-19-netmiles.md
+++ b/_posts/en/projects/2014-09-19-netmiles.md
@@ -7,27 +7,28 @@ layout: "project"
 permalink: "/projects/netmiles/"
 
 title:  "NetMiles"
-subtitle: "Curabitur turpis mauris, ornare sed ipsum at, semper vehicula sapien."
+subtitle: "Curabitur turpis mauris"
 description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet hendrerit erat. Ut tristique mauris orci, quis ornare felis cursus et. Donec dui leo, malesuada a tellus at, venenatis ultrices tortor. Sed adipiscing, mauris in interdum malesuada, elit elit facilisis eros, consequat dapibus ipsum orci vel nulla."
 
 project-img: "2014-09-19-netmiles/netmiles.jpg"
 project-thumb: "2014-09-19-netmiles/netmiles.jpg"
 
-project: ""
-project-link: ""
+project: "www.netmiles.com.br"
+project-link: "http://www.netmiles.com.br"
 
-client: ""
+client: "NetMiles"
 
-year: ""
+year: "2013"
 
 project-type: ""
 
 icons:
-  - icon-name: "ok"
-  - icon-name: "pok"
-  - icon-name: "dok"
+  - icon-name: "embed"
+  - icon-name: "code"
+  - icon-name: "console"
 
 techs:
   - tech-name: "ok"
+  - tech-name: "pok"
   - tech-name: "pok"
 ---
