last adj ok-ish

--- a/_posts/pt-br/pages/2014-09-19-index.md
+++ b/_posts/pt-br/pages/2014-09-19-index.md
@@ -2,4 +2,8 @@
 name: "index"
 layout: "home"
 permalink: "/"
+
+bg-image: "42ipintado.jpg"
+highlight: "42<span class='home-cover__title--lowercase'>i</span> - Produtora digital independente"
+subtitle: "R. General Jardim, 645 - Sala 62 - Vila Buarque"
 ---
