--- a/_posts/en/projects/2014-09-19-netmiles.md
+++ b/_posts/en/projects/2014-09-19-netmiles.md
@@ -6,7 +6,7 @@ type: "project"
 layout: "project"
 permalink: "/projects/netmiles/"
 
-title:  "NetMiles"
+title:  "NetMiles EN"
 subtitle: "Curabitur turpis mauris"
 description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet hendrerit erat. Ut tristique mauris orci, quis ornare felis cursus et. Donec dui leo, malesuada a tellus at, venenatis ultrices tortor. Sed adipiscing, mauris in interdum malesuada, elit elit facilisis eros, consequat dapibus ipsum orci vel nulla."
 
