project page ok-ish

--- a/_posts/pt-br/projects/2015-02-08-cba.md
+++ b/_posts/pt-br/projects/2015-02-08-cba.md
@@ -7,20 +7,21 @@ layout: "project"
 permalink: "/projetos/cba/"
 
 title:  "Caixa Belas Artes"
-subtitle: "Cinema Belas Artes"
-description: "Um dos mais icônicos cinemas de rua de São Paulo, o Caixa Belas Artes foi recentemente reaberto. Com isso, surgiu a necessidade de um novo site que estivesse alinhado com essa nova fase. Em um projeto que incluiu não apenas site, mas também o desenvolvimento de um sistema de afiliados para a campanha de reabertura do cinema, a 42i trabalhou nesse projeto desde o começo, fazendo tudo: desde as pranchas conceituais até a programação."
+subtitle: "Um dos mais icônicos cinemas de rua de São Paulo"
+description: ""
 
-project-img: "2015-02-08-cba/cba.jpg"
+project-img: "2015-02-08-cba/cba-cover.jpg"
 project-thumb: "2015-02-08-cba/cba.jpg"
 
 project: "www.caixabelasartes.com.br"
 project-link: "http://www.caixabelasartes.com.br"
 
 client: "Caixa Belas Artes"
+client-link: "http://www.caixabelasartes.com.br"
 
 year: "2014"
 
-project-type: ""
+project-type: "Site Institucional + Sistema Customizado"
 
 icons:
   - icon-name: "mobile"
@@ -34,8 +35,11 @@ techs:
   - tech-name: "Wordpress"
 
 browsers:
-  - icon-name: "mobile"
-  - icon-name: "tablet"
-  - icon-name: "desktop"
+  - browser-name: "chrome"
+  - browser-name: "firefox"
+  - browser-name: "ie"
+  - browser-name: "safari"
+  - browser-name: "opera"
 
 ---
+<span class="dropcap">U</span>m dos mais icônicos cinemas de rua de São Paulo, o Caixa Belas Artes foi recentemente reaberto. Com isso, surgiu a necessidade de um novo site que estivesse alinhado com essa nova fase. Em um projeto que incluiu não apenas site, mas também o desenvolvimento de um sistema de afiliados para a campanha de reabertura do cinema, a 42i trabalhou nesse projeto desde o começo, fazendo tudo: desde as pranchas conceituais até a programação.
