--- a/_posts/pt-br/projects/2015-02-08-papelpop.md
+++ b/_posts/pt-br/projects/2015-02-08-papelpop.md
@@ -7,20 +7,21 @@ layout: "project"
 permalink: "/projetos/papelpop/"
 
 title:  "PapelPOP"
-subtitle: ""
-description: "Desde 2006 na ativa, o Papelpop é um dos maiores e mais importantes veículos de cultura pop no Brasil. A relação do portal com a 42i é de longa data: trabalhando junto desde sua fundação em março de 2013, a produtora desde então fica a cargo de todas as questões técnicas relacionadas ao site, sendo a principal delas a manutenção e o desenvolvimento da página em si. Além disso, essa parceria ainda abrange suporte total ao site, como correções de eventuais bugs, desenvolvimento de novas versões e de atualizações na versão corrente, melhorias na performance do site e também na experiência dos leitores. Mais recentemente, na última versão, participamos ativamente do redesign do site, indo além da programação e trabalhando de perto com a equipe do Papelpop no processo criativo."
+subtitle: "Um dos mais importantes veículos de cultura pop no Brasil"
+description: ""
 
-project-img: "2015-02-08-papelpop/ppp.jpg"
+project-img: "2015-02-08-papelpop/ppp-cover.jpg"
 project-thumb: "2015-02-08-papelpop/ppp.jpg"
 
-project: "www.papelpop.com.br"
-project-link: "http://www.papelpop.com.br"
+project: "www.papelpop.com"
+project-link: "http://www.papelpop.com"
 
 client: "Papelpop"
+client-link: "http://www.papelpop.com"
 
 year: "2013 - presente"
 
-project-type: ""
+project-type: "Site de Notícias"
 
 icons:
   - icon-name: "mobile"
@@ -34,8 +35,11 @@ techs:
   - tech-name: "Wordpress"
 
 browsers:
-  - icon-name: "mobile"
-  - icon-name: "tablet"
-  - icon-name: "desktop"
+  - browser-name: "chrome"
+  - browser-name: "firefox"
+  - browser-name: "ie"
+  - browser-name: "safari"
+  - browser-name: "opera"
 
 ---
+<span class="dropcap">D</span>esde 2006 na ativa, o Papelpop é um dos maiores e mais importantes veículos de cultura pop no Brasil. A relação do portal com a 42i é de longa data: trabalhando junto desde sua fundação em março de 2013, a produtora desde então fica a cargo de todas as questões técnicas relacionadas ao site, sendo a principal delas a manutenção e o desenvolvimento da página em si. Além disso, essa parceria ainda abrange suporte total ao site, como correções de eventuais bugs, desenvolvimento de novas versões e de atualizações na versão corrente, melhorias na performance do site e também na experiência dos leitores. Mais recentemente, na última versão, participamos ativamente do redesign do site, indo além da programação e trabalhando de perto com a equipe do Papelpop no processo criativo.
