--- a/_posts/pt-br/projects/2015-02-08-gisele.md
+++ b/_posts/pt-br/projects/2015-02-08-gisele.md
@@ -7,23 +7,21 @@ layout: "project"
 permalink: "/projetos/gisele/"
 
 title:  "Gisele"
-subtitle: "Coletor de Índices GRI - Ricca"
-description: "Focada em facilitar a conversa entre empresas e seus acionistas e stakeholders, a Ricca é especializada na relação com investidores e comunicação corporativa. Entre seus serviços se encontra a confecção do GRI (Global Report Initiative), relatório cuja construção passa por uma série de etapas, sendo uma das mais importantes a coleta dos dados juntos ao cliente. Diante disso, se tornou necessário o desenvolvimento de um sistema que facilitasse essa coletas de informações.
+subtitle: "Coletor de Índices GRI - Ricca Relações com Investidores"
+description: ""
 
-A 42i desenvolveu tudo desde o início, aplicando toda a sua capacidade com base nas necessidades apresentadas pela Ricca. Além do planejamento e programação, a concepção da identidade visual também contemplou o projeto. Em uma parceria que não acaba apenas na finalização do site, também faz parte do projeto monitorar a performance e o funcionamento do Coletor, em um regime de desenvolvimento constante onde a 42i é a responsável por seu desdobramento, mantendo o projeto sempre atualizado e amigável aos seus usuários.
-"
-
-project-img: "2015-02-08-gisele/gisele.jpg"
+project-img: "2015-02-08-gisele/gisele-cover.jpg"
 project-thumb: "2015-02-08-gisele/gisele.jpg"
 
 project: "www.giselericca.com.br"
 project-link: "http://www.giselericca.com.br"
 
 client: "Ricca"
+client-link: "http://www.riccari.com.br"
 
 year: "2014"
 
-project-type: ""
+project-type: "Sistema Customizado"
 
 icons:
   - icon-name: "desktop"
@@ -35,8 +33,13 @@ techs:
   - tech-name: "Laravel"
 
 browsers:
-  - icon-name: "mobile"
-  - icon-name: "tablet"
-  - icon-name: "desktop"
+  - browser-name: "chrome"
+  - browser-name: "firefox"
+  - browser-name: "ie"
+  - browser-name: "safari"
+  - browser-name: "opera"
 
 ---
+<span class="dropcap">F</span>ocada em facilitar a conversa entre empresas e seus acionistas e stakeholders, a Ricca é especializada na relação com investidores e comunicação corporativa. Entre seus serviços se encontra a confecção do GRI (Global Report Initiative), relatório cuja construção passa por uma série de etapas, sendo uma das mais importantes a coleta dos dados juntos ao cliente. Diante disso, se tornou necessário o desenvolvimento de um sistema que facilitasse essa coletas de informações.
+
+A 42i desenvolveu tudo desde o início, aplicando toda a sua capacidade com base nas necessidades apresentadas pela Ricca. Além do planejamento e programação, a concepção da identidade visual também contemplou o projeto. Em uma parceria que não acaba apenas na finalização do site, também faz parte do projeto monitorar a performance e o funcionamento do Coletor, em um regime de desenvolvimento constante onde a 42i é a responsável por seu desdobramento, mantendo o projeto sempre atualizado e amigável aos seus usuários.
