First online version

--- a/404.md
+++ b/404.md
@@ -1,6 +1,11 @@
 ---
 permalink: /404.html
 ---
-Ops, você nos pegou de calças curtas. Ainda não temos uma página para o erro 400. Mas podemos adiantar que isso significa que o conteúdo procurado não existe. Mal.
 
+
+
+Olá, temos uma notícia boa e outra ruim.
+
+- Primeiro a boa, você está no site da 42i. Somos uma produtora digital independente, prazer :)
+- Agora a ruim, você nos pegou de calças curtas. Ainda não temos uma página para o erro 400. **Mas podemos adiantar que isso significa que o conteúdo procurado não existe**. Mal.
 Para todos os efeitos, [dá um pulo aqui](http://42i.com.br) para saber um pouco mais sobre nós :)
