--- a/_posts/pt-br/projects/2015-02-08-cba.md
+++ b/_posts/pt-br/projects/2015-02-08-cba.md
@@ -33,6 +33,8 @@ techs:
   - tech-name: "CSS3"
   - tech-name: "Javascript"
   - tech-name: "Wordpress"
+  - tech-name: "PHP"
+  - tech-name: "MySQL"
 
 browsers:
   - browser-name: "chrome"
