Blog entry (still hidden, though)

--- a/_posts/pt-br/projects/2015-02-08-ipg.md
+++ b/_posts/pt-br/projects/2015-02-08-ipg.md
@@ -44,6 +44,9 @@ browsers:
   - browser-name: "opera"
 
 ---
-<span class="dropcap">C</span>onhecido por seu trabalho à frente dos direitos trabalhistas da mulher, em 2013 o Instituto Patrícia Galvão fez uma abrangente pesquisa sobre trabalho remunerado e trabalho doméstico no Brasil. Com os dados obtidos, em 2014 a 42i desenvolveu dois projetos para divulgar essa pesquisa: o site de divulgação da pesquisa propriamente dita e uma enquete para divulgar a mesma. Item primordial do projeto como um todo, a enquete na verdade é uma calculadora de horas (remuneradas e não remuneradas) trabalhadas por cada integrante do lar do usuário. Com base nas informações dadas, é calculada uma distribuição de horas e também é dado um resultado, sendo normalmente uma mulher a pessoa mais sobrecarregada da casa.
 
-O trabalho foi feito em parceira com a [Alma//Beta](http://almabeta.com), que foi a responsável pela idealização do trabalho desde a adequação do conteúdo e planejamento para a divulgação online até os textos da enquete. Sendo uma grande oportunidade de contribuir para algo maior usando sua área de especialização, foi um projeto interessante principalmente nos campos técnicos, pois deu a chance à 42i de trabalhar com visualização de dados e um tipo de interação diferente do que é feito no cotidiano da agência.
+<span class="dropcap">C</span>onhecido por seu trabalho à frente dos direitos trabalhistas da mulher, em 2013 o Instituto Patrícia Galvão fez uma abrangente pesquisa sobre trabalho remunerado e trabalho doméstico no Brasil. Com os dados obtidos, em 2014 a 42i desenvolveu dois projetos para divulgar essa pesquisa: o site de divulgação da pesquisa propriamente dita e uma enquete para divulgar a mesma. Item primordial do projeto como um todo, a enquete na verdade é uma calculadora de horas (remuneradas e não remuneradas) trabalhadas por cada integrante do lar do usuário. Com base nas informações dadas é calculada uma distribuição de horas e também é dado um resultado, sendo normalmente uma mulher a pessoa mais sobrecarregada da casa.
+
+O trabalho foi feito em parceira com a [Alma//Beta](http://almabeta.com), que foi a responsável pela adequação do conteúdo e planejamento para a divulgação online e pelos textos da enquete; ficando entre os 5 finalistas de uma premiação da ONU na categoria uso de tecnologia para empoderamento social e político das mulheres.
+
+Sendo uma grande oportunidade de contribuir para algo maior usando sua área de especialização, foi um projeto interessante principalmente nos campos técnicos, pois deu a chance à 42i de trabalhar com visualização de dados e um tipo de interação diferente do que é feito no cotidiano da produtora.
