Adjustments for publication and first blog post

--- a/_posts/pt-br/blog/2015-02-10-quem-e-a-42i.md
+++ b/_posts/pt-br/blog/2015-02-10-quem-e-a-42i.md
@@ -12,12 +12,15 @@ author: "42i"
 thumb: "2014-09-22-apps/42ipintado.jpg"
 ---
 
-<span class="dropcap">P</span>erto do nosso aniversário (em março completamos dois anos), abrimos espaço para contar um pouco mais sobre quem somos e como pensamos. Para começar, a 42i é uma produtora digital independente localizada no centro de São Paulo
+<span class="dropcap">P</span>erto do nosso aniversário (em março completamos dois anos), abrimos espaço para contar um pouco mais sobre quem somos e como pensamos. Para começar, a 42i é uma produtora digital independente localizada no centro de São Paulo, onde divide escritório com a 127ml.
 
-**Como o nosso trabalho funciona?** Gostamos de nos envolver no projeto como um todo, sem essa de apenas entregar um projeto para programar. Claro, em alguns projetos nossa função pode ser mesmo apenas a programação, mas faz parte da nossa identidade estar sempre envolvidos no processo criativo o máximo possível.
+<div class="image-caption">
+  <img src="/public/images/blog/2015-02-11-sobre-a-42i/escritorio.jpg">
+  <small>Nosso novo escritório (ainda estamos organizando :-))</small>
+</div>
 
-**O que nos caracteriza?** Entre outras coisas, somos fãs de processos e estamos sempre dispostos a avaliar qual é a melhor estratégia e tecnologia para cada caso. Buscando maneiras de fas é uma maneira que temos de minimizar o tempo gasto com tarefas mecânicas.
+**Como o nosso trabalho funciona?** Gostamos de nos envolver no trabalho como um todo. Claro, em alguns casos nossa função pode ser mesmo apenas programar, mas faz parte da nossa identidade estar sempre envolvidos na parte criativa o máximo possível.
 
-Tendo isso em mente, o foco da equipe fica nas tarefas estratégicas que possibilitem uma entrega melhor. Nisso, fica bem claro: uma relação próxima ao cliente e feedbacks constantes também está sempre na nossa mira, já que assim conseguimos validar o trabalho com rapidez e sempre.
+**O que nos caracteriza?** Entre outras coisas, somos fãs de processos e estamos sempre dispostos a avaliar qual é a melhor estratégia e tecnologia para cada projeto. Nisso, fica bem claro: uma relação próxima ao cliente e feedbacks constantes estão sempre na nossa mira, já que assim conseguimos estar sempre na mesma página.
 
 Por fim, vale dizer o óbvio: queremos ter uma equipe feliz e satisfeita e por isso acreditamos que a vida fora do trabalho é mais importante do que a dentro. Partimos do princípio de que uma vida pessoal rica contribui para um rendimento maior, principalmente no que toca qualidade. Somos comprometidos com o desenvolvimento profissional de nossa equipe e tentamos sempre apresentar e ensinar coisas novas, em uma troca que acrescenta para nós também.
