--- a/_posts/pt-br/pages/2014-09-19-about.md
+++ b/_posts/pt-br/pages/2014-09-19-about.md
@@ -12,8 +12,6 @@ permalink: "/sobre/"
 
 Na prática acreditamos que se houver algo em que podemos contribuir com a comunicação ou produtividade de nossos clientes, desde o desenvolvimento de um sistema de gerenciamento de indicadores de sustentabilidade até a gestão da programação de filmes em um cinema, juntos, chegamos em uma solução.
 
-<!-- ## Gostaria de nos conhecer melhor?
+## Gostaria de nos conhecer melhor?
 
 <span class="dropcap">E</span>ntão dê uma olhada em nossos [projetos](/projetos), uma lida em nosso [blog](/blog) ou nos dê um toque em um de nossos [meios de contato](/contato).
-
-Adoraríamos conhecer você, nem que seja apenas um oi. -->
