--- a/_posts/pt-br/projects/2015-02-08-gisele.md
+++ b/_posts/pt-br/projects/2015-02-08-gisele.md
@@ -31,6 +31,8 @@ techs:
   - tech-name: "CSS3"
   - tech-name: "Javascript"
   - tech-name: "Laravel"
+  - tech-name: "PHP"
+  - tech-name: "MySQL"
 
 browsers:
   - browser-name: "chrome"
