added estagio page

--- a/_posts/pt-br/pages/2014-09-19-about.md
+++ b/_posts/pt-br/pages/2014-09-19-about.md
@@ -1,12 +1,12 @@
 ---
-title: "Sobre"
+title: "Um pouco sobre nós"
 name: "about"
-layout: "about"
+layout: "general"
 weight: "1"
 permalink: "/sobre/"
----
+img: "about-img.jpg"
 
-## Um pouco sobre nós
+---
 
 <span class="dropcap">A</span> 42i é uma empresa que desde seu começo se define como uma produtora digital e nosso foco é construir soluções de tecnologia para facilitar a comunicação e processos. Sites, aplicativos e sistemas customizados são apenas alguns dos produtos mais conhecidos que temos em nosso portfólio.
 
