:w :q added new portfolio page

--- a/_posts/pt-br/blog/2015-08-07-ia-i.md
+++ b/_posts/pt-br/blog/2015-08-07-ia-i.md
@@ -1,5 +1,5 @@
 ---
-title: "Inteligência Artificial I"
+title: "☞ Inteligência Artificial I"
 name: "inteligencia-artificial-i"
 date: "2015-08-07 9:53:00"
 category: "blog"
@@ -17,7 +17,7 @@ Desde a década de 1940 a humanidade sonha com os grandes e revolucionários ava
 
 Pode se dizer que seu desenvolvimento começou logo após a Segunda Guerra Mundial, com o artigo <a href="http://cogprints.org/499/1/turing.HTML" target="_blank">Computing Machinery and Intelligence</a> de <a href="https://pt.wikipedia.org/wiki/Alan_Turing" target="_blank">Alan Turing</a>.
 
-Por ser um conceito muito abrangente, uma de suas definições mais aceitas é: “executar funções que, caso um ser humano fosse executar, seriam consideradas inteligentes”. <a href="https://en.wikipedia.org/wiki/John_McCarthy_(computer_scientist)" target="_blank">McCarthy</a>, quem cunhou o termo em 1955, a define como "a ciência e engenharia de produzir máquinas inteligentes”.
+Por ser um conceito muito abrangente, uma de suas definições mais aceitas é: “executar funções que, caso um ser humano fosse executar, seriam consideradas inteligentes”. <a href="https://en.wikipedia.org/wiki/John_McCarthy_(computer_scientist)" target="_blank">McCarthy</a>, quem cunhou o termo em 1955, a define como <em>"a ciência e engenharia de produzir máquinas inteligentes”</em>.
 
 A <strong>IA – inteligência artificial</strong> (ou em inglês, <em>AI - artificial intelligence</em>) é a inteligência similar à humana apresentada por mecanismos ou software e um campo de estudo acadêmico.
 O surgimento do computador moderno proporcionou que a inteligência artificial pudesse sair do campo puramente teórico e ganhasse meios e massa crítica para se estabelecer como ciência integral, com suas problemáticas e metodologias próprias.
