--- a/_posts/pt-br/projects/2015-08-04-dossie.md
+++ b/_posts/pt-br/projects/2015-08-04-dossie.md
@@ -51,68 +51,99 @@ browsers:
     text-shadow: 0 2px 5px rgba(0, 0, 0, 0.75);
   }
 
-  .quad-img {
+  .dossie-quad-img {
     display: inline-block;
-    width: 120px;
-    height: 120px;
+    width: 130px;
+    height: 130px;
+    margin: 0 5px 5px 0;
+
+    overflow: hidden;
+  }
+
+  .dossie-wf-desk {
+    display: inline-block;
+    width: 220px;
+    height: auto;
+    margin: 0 5px 5px 0;
+
+    overflow: hidden;
+  }
+
+  .dossie-wf-img {
+    display: inline-block;
+    width: 130px;
+    height: auto;
     margin: 0 5px 5px 0;
 
     overflow: hidden;
   }
 </style>
 
-<span class="dropcap">A</span>A internet é hoje uma fonte essencial de conteúdos para suporte editorial nas redações e nas mídias sociais. O Dossiê Violência contra as Mulheres visa contribuir para a ampliação e o aprofundamento do debate sobre o tema nos meios de comunicação tradicionais e nas mídias sociais por meio da compilação, sistematização e disponibilização de dados oficiais e pesquisas de percepção, além de informações relevantes e análises de especialistas sobre a realidade do problema no Brasil.
+## O Projeto
 
-Ao acessar o Dossiê, profissionais de imprensa e ativistas digitais encontram um conteúdo multimídia diversificado, preciso, confiável e atualizado na forma de dados, fatos e pesquisas, além de indicações de fontes qualificadas de diversas áreas do conhecimento que atuam com o tema da violência contra as mulheres.
+<img style="width: 100%; height: auto" src="/public/images/projects/2015-08-04-dossie/fotos/dossie_modelos.jpg" alt="">
+<blockquote>"O Dossiê, foi um projeto mais do que gratificante, onde tivemos a oportunidade de participar da criação de mais uma ferramenta na luta pelos direitos humanos."</blockquote>
 
-Com esta ferramenta online, o Instituto Patrícia Galvão pretende subsidiar e contribuir para a qualificação da divulgação de informações e do debate sobre a violência contra as mulheres no Brasil, com foco especialmente na violência doméstica e sexual e nos recortes de raça e orientação sexual, que apontam a intersecção da violência de gênero com o racismo e a lesbofobia.
 
-As informações serão atualizadas constantemente. E no futuro também serão acrescidos capítulos sobre outras dimensões da violência baseada em desigualdades de gênero (envie sua sugestão). O compartilhamento e reprodução das informações são livres, desde que citada a fonte (leia nossos termos de uso).
+<span class="dropcap">U</span>m dos clientes da casa, notável por seu trabalho à frente dos direitos trabalhistas da mulher, o <a href="http://www.agenciapatriciagalvao.org.br" target="_blank">Instituto Patrícia Galvão (IPG)</a> apresenta seu mais novo projeto - e a 42i mais uma vez colabora com seu expertize no desenvolvimento da peça.
 
-##### Direitos, responsabilidades e serviços para enfrentar a violência
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_01.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_02.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_03.jpg" alt="">
+Lançado oficialmente no dia 07/08, data da sanção da <a href="https://en.wikipedia.org/wiki/Lei_Maria_da_Penha" target="_blank">Lei Maria da Penha</a>, o Dossiê Violência contra as Mulheres tem o propósito de contribuir para o debate sobre o tema nos meios de comunicação tradicionais e nas mídias sociais por meio da compilação, sistematização e disponibilização de dados oficiais e pesquisas de percepção, além de informações relevantes e análises de especialistas sobre a realidade do problema no Brasil.
 
-##### Feminicídio
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_04.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_05.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_06.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_07.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_08.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_09.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_10.jpg" alt="">
+Dentro do guarda-chuva digital do IPG, o site apresenta um banco de <a href="http://www.agenciapatriciagalvao.org.br/dossie/pesquisas/" target="_blank">pesquisas</a> e de <a href="http://www.agenciapatriciagalvao.org.br/dossie/fontes/" target="_blank">fontes</a>, com especialistas e profissionais de áreas relacionadas ao tema. Traz também páginas que conceitualizam alguns dos diferentes tipos de violência contra a mulher, como por exemplo <a href="http://www.agenciapatriciagalvao.org.br/dossie/violencias/feminicidio/" target="_blank">feminicídio</a>.
 
-##### Violência contra mulheres lésbicas, bis e trans
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_11.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_12.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_13.jpg" alt="">
+### Nosso Processo
+Com base em reuniões e conversas com a equipe do IPG, montamos um plano de trabalho com etapas de análise de conteúdo, arquitetura da informação, criação, desenvolvimento, testes e publicação e monitoramento.
 
-##### Violência doméstica e familiar
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_14.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_15.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_16.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_17.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_18.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_19.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_20.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_21.jpg" alt="">
+Desenvolvemos a interface priorizando o uso dos sistemas de busca, com filtros para facilitar as consultas.
+Um ponto importante foi o consumo de conteúdo, onde estudamos como otimizar a legibilidade do material e a navegabilidade entre páginas e seções. Uma característica que adicionamos no meio do projeto foi o sistema de compartilhamento de conteúdo, muito importante para facilitar a divulgação e conscientização.
 
-##### Violência de gênero na Internet
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_22.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_23.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_24.jpg" alt="">
+Ficou a nosso cargo também o projeto gráfico e a direção de arte do Dossiê.
 
-##### Violência e racismo
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_25.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_26.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_27.jpg" alt="">
+<small><em>Abaixo, alguns wireframes mobile</em></small>
 
-##### Violência sexual
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_28.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_29.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_30.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_31.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_32.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_33.jpg" alt="">
-<img class="quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_34.jpg" alt="">
+<img class="dossie-wf-img" src="/public/images/projects/2015-08-04-dossie/wireframes/dossie_wf_01.jpg" alt="">
+<img class="dossie-wf-img" src="/public/images/projects/2015-08-04-dossie/wireframes/dossie_wf_02.jpg" alt="">
+<img class="dossie-wf-img" src="/public/images/projects/2015-08-04-dossie/wireframes/dossie_wf_03.jpg" alt="">
+<img class="dossie-wf-img" src="/public/images/projects/2015-08-04-dossie/wireframes/dossie_wf_04.jpg" alt="">
+<img class="dossie-wf-img" src="/public/images/projects/2015-08-04-dossie/wireframes/dossie_wf_05.jpg" alt="">
+
+<blockquote>"Começamos o estudo de interface, pelo mobile. Assim entendemos quais seriam os maiores desafios de interface e de fluxo de navegação."</blockquote>
+
+
+<small style="display: block;"><em>Alguns wireframes desktop</em></small>
+<img class="dossie-wf-desk" src="/public/images/projects/2015-08-04-dossie/wireframes/dossie_wf_06.jpg" alt="">
+<img class="dossie-wf-desk" src="/public/images/projects/2015-08-04-dossie/wireframes/dossie_wf_07.jpg" alt="">
+<img class="dossie-wf-desk" src="/public/images/projects/2015-08-04-dossie/wireframes/dossie_wf_08.jpg" alt="">
+
+<blockquote>"Uma vez definida a hierarquia do conteúdo e o fluxo de navegação, desenvolvemos as demais telas"</blockquote>
+
+Devido ao seu conteúdo delicado, um dos maiores desafios desse projeto foi desenvolver suas ilustrações de forma que não fossem fossem um mecanismo de desencadeamento para as vítimas, apelativas ou involuntariamente caraterizassem algum estereótipo. Desenvolvido com maestria, o trabalho foi assinado por <a href="http://georgeschall.tumblr.com" target="_blank">George Schall</a> e deu conta da expectativa alta que foi gerada, tendo resultado muito positivo.
+
+<small><em>Algumas ilustrações do projeto</em></small>
+
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_01.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_04.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_13.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_16.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_17.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_22.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_24.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_26.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_28.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/quadrinhos/dossie_quad_33.jpg" alt="">
+
+### Etapas
+Aqui, alguns registros do processo de produção do Dossiê:
+
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/fotos/01.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/fotos/02.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/fotos/03.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/fotos/04.jpg" alt="">
+<img class="dossie-quad-img" src="/public/images/projects/2015-08-04-dossie/fotos/05.jpg" alt="">
+
+## Conclusão
+O Dossiê, foi um projeto mais do que gratificante, onde tivemos a oportunidade de participar da criação de mais uma ferramenta na luta pelos direitos humanos.
+
+O projeto gráfico, as ilustrações e composições, os formatos de conteúdo, os mecanismos de busca e de funcionamento, todos tem o objetivo de facilitar o uso dessa ferramenta.
+
+Nesse projeto conseguimos contribuir utilizando o nosso know-how e a nossa especialidade e foi muito desafiador pela sensibilidade necessária pra tratar um assunto delicado, sem perder a objetividade.
